# data-mining

./: Dockerfile  Dockerfile_kafka_connect  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: credentials_minio.json
scripts/: plugins.sh
src/: manage.py
src/airflow/: airflow.cfg
src/airflow/dags/: kafka_postgres_dag.py  minio_kafka_dag.py
src/app/: __init__.py
src/app/core/migrations/: 0001_initial.py  0002_coreproduct.py
src/app/core/models/: __init__.py  abstract_model.py  base.py
src/app/crawler/: apps.py  etl.py  loaders.py  serializer.py  urls.py  views.py
src/app/crawler/partner/yody/: __init__.py  api.py  request.py
src/app/crawler/partners/yody/: api.py  extract.py  load.py  request.py  transform.py
src/app/crawler/scripts/: consume_yody_data.py
src/app/crawler/tasks/: extract_yody_to_datalake.py  load_data_to_postgres.py  yody_category_crawler.py
src/helper/: kafka_config.py  minio_config.py
src/src/: api.py  asgi.py  urls.py  wsgi.py
src/src/configs/: base.py  settings.py
src/warehouse/: dbt_project.yml
src/warehouse/models/: sources.yaml
src/warehouse/models/example/: schema.yml  stg_dimproductcategory.sql
src/warehouse/models/mart/: mart_yody_product_analysis.sql
src/warehouse/models/staging/: stg_brand.sql  stg_category.sql  stg_core_product.sql  stg_fact_product_detail.sql  stg_product.sql  stg_product_assets.sql  stg_product_color.sql  stg_product_option.sql  stg_product_size.sql  stg_source_channel.sql
