[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["tien.phan.hdwebsoft <tien.phan@hdwebsoft.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.8.2"
dbt-core = "^1.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
