[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["tien.phan.hdwebsoft <tien.phan@hdwebsoft.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-postgres = "^1.8.2"
dbt-core = "^1.8.8"
django = "^5.1.3"
django-storages = "^1.14.4"
google-cloud-storage = "^2.18.2"
python-dotenv = "^1.0.1"
minio = "^7.2.10"
celery = "^5.4.0"
apache-airflow = "^2.10.3"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
